project/src/index.css
*{
    box-sizing: border-box;
    margin: 0px;
}

body{
    /* height: fit-content; */
    height: 50%;
}

.flex-row{
    display: flex;
    justify-content: center;
}

.flex-col{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.dis-none{
    display: none;
}

#modal {
    position: relative;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.349);
}

#tool-wrapper {
    width: 300px;
    padding: 5px;
    position: absolute;
    background-color: grey;
    transform: translateX(-50%);
}

#pixel-board {
    display: flex;
    flex-direction: column;
    width: 50%;
}

.pixel {
    width: 100%;
}

.pixel-row {
    display: flex;
    height: inherit;
}

#logo-git {
    transform: scale(50%) translateY(-50%);
}

